@@ -37,6 +37,7 @@
     + Added option to disable OpenStreetMap address geoip lookups;
     + Added $api_stringify_results config.php option for <PHP81 API backwards compatibility;
     + Added support for newly added widgets to be sortable with jQuery (#4711);
+    + Added support for using widget parameters; added recent_logins widget (#4184);
 
     Security Fixes:
     ----------------------------
